--- a/front-end/src/styles/components/_navigation.scss
+++ b/front-end/src/styles/components/_navigation.scss
@@ -75,3 +75,49 @@
     }
   }
 }
+
+// -------------------------------------------------------------------------------------------------------
+
+@media screen and (max-width: 850px) {
+  .sidebar {
+    display: flex;
+    min-height: 50px;
+    margin-bottom: 0.2rem;
+
+    .id,
+    .socialNetwork {
+      display: none;
+    }
+    .navigation {
+      width: 100%;
+      padding: 0.1rem 1rem;
+
+      ul {
+        display: flex;
+        justify-content: space-between;
+
+        span {
+          margin-left: 1.5rem !important;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 580px) {
+  .sidebar {
+    ul {
+      justify-content: space-around !important;
+
+      li {
+        padding: 1rem 0 !important;
+      }
+      i {
+        font-size: 1.4rem !important;
+        transform: translateY(-3px) !important;
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+}
