--- a/handihelp-front/src/styles/pages/_app.scss
+++ b/handihelp-front/src/styles/pages/_app.scss
@@ -9,6 +9,18 @@
     margin:0 auto;
 }
 
+.navbar-brand-logout
+{
+    width: 78%;
+    left: 0;
+    text-align: left;
+    margin:0 auto;
+}
+
+.copyright-footer {
+    background-color : rgba(255, 245, 245, 0.2);
+}
+
 @media screen and (min-width: 1200px) {
     .navbar-brand
     {
