--- a/handihelp-front/src/styles/pages/_connexion.scss
+++ b/handihelp-front/src/styles/pages/_connexion.scss
@@ -11,3 +11,8 @@
         max-width: 70%;
     }
 }
+
+.imageConnexion{
+    background: url("../../assets/fond.png") no-repeat center;
+    background-size: contain;
+}
