--- a/handihelp-front/src/styles/_settings.scss
+++ b/handihelp-front/src/styles/_settings.scss
@@ -5,5 +5,5 @@ $font-2: "Dosis", sans-serif;
 $font-3: "Josefin Sans", serif;
 
 /* déclaration des couleurs */
-$color-1: rgb(0, 207, 135); //vert logo
+$color-1: rgba(0, 207, 135, .8); //vert logo
 $color-2: rgb(0, 135, 230); // bleu logo ;
