--- a/handihelp-front/src/styles/pages/_home.scss
+++ b/handihelp-front/src/styles/pages/_home.scss
@@ -13,5 +13,12 @@
 .btn-icon {
   margin-left: 10px;
   font-size: 1.5rem;
-  
 }
+
+.home-btn:hover,
+.home-btn:focus {
+  a {
+    color: whitesmoke !important;
+  }
+}
+
