--- a/handihelp-front/src/styles/pages/_home.scss
+++ b/handihelp-front/src/styles/pages/_home.scss
@@ -13,5 +13,10 @@
 .btn-icon {
   margin-left: 10px;
   font-size: 1.5rem;
-  
+}
+.main-logo {
+  max-height: 70px;
+}
+.main-brand {
+  max-height: 90px;
 }
