--- a/handihelp-front/src/styles/pages/_about.scss
+++ b/handihelp-front/src/styles/pages/_about.scss
@@ -1,56 +1,657 @@
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
+/**
+* Template Name: Bell - v4.5.0
+* Template URL: https://bootstrapmade.com/bell-free-bootstrap-4-template/
+* Author: BootstrapMade.com
+* License: https://bootstrapmade.com/license/
+*/
+.aboutstyle {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+  }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
+  p {
+    line-height: 1.55;
+    color: #333;
+    font-size: 400;
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+  }
 
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #474e5d;
-  color: white;
-}
+  h1 {
+    font-size: 62px;
+  }
 
-.container {
-  padding: 0 16px;
-}
+  h2 {
+    font-size: 30px;
+    margin-bottom: 65px;
+  }
 
-.container::after,
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+  h3 {
+    font-size: 24px;
+  }
 
-.title {
-  color: grey;
-}
+  h4 {
+    font-size: 18px;
+  }
 
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
+  /*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
+  a {
+    transition: 0.5s;
+    text-decoration: none;
+    color: #199eb8;
+  }
+  a:hover {
+    color: #23c2e1;
+  }
 
-.button:hover {
-  background-color: #555;
-}
+  /*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
+  .back-to-top {
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 15px;
+    z-index: 996;
+    background: #199eb8;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    transition: all 0.4s;
+  }
+  .back-to-top i {
+    font-size: 28px;
+    color: #fff;
+    line-height: 0;
+  }
+  .back-to-top:hover {
+    background: #1ebddc;
+    color: #fff;
+  }
+  .back-to-top.active {
+    visibility: visible;
+    opacity: 1;
+  }
 
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
+  /* ==================================================
+  Elements
+  ================================================== */
+  .btn {
+    background-color: #199eb8;
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-weight: 800;
+    color: #fff;
+    padding: 15px 45px;
+    border-radius: 50px;
+  }
+  .btn:hover {
+    background-color: #e04f00;
+    color: #fff;
+  }
+  .btn:focus {
+    color: #fff;
+  }
+
+  .btn-ghost {
+    border: 3px solid #fff;
+    background-color: transparent;
+  }
+  .btn-ghost:hover {
+    background-color: #fff;
+    color: #199eb8;
+  }
+
+  section {
+    padding: 85px 0;
+  }
+
+  .card {
+    position: relative;
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+    margin: 0;
+    overflow: hidden;
+  }
+
+  a:hover {
+    text-decoration: none !important;
+  }
+
+  /*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+  #header {
+    background: #199eb8;
+    height: 70px;
+  }
+  #header #logo h1 {
+    font-size: 32px;
+    margin: 0;
+    line-height: 0;
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  }
+  #header #logo h1 a,
+  #header #logo h1 a:hover {
+    color: #fff;
+  }
+  #header #logo img {
+    padding: 0;
+    margin: 0;
+    max-height: 40px;
+  }
+
+  .scrolled-offset {
+    margin-top: 70px;
+  }
+
+  /*--------------------------------------------------------------
+# Navigation Menu
+--------------------------------------------------------------*/
+  /**
+* Desktop Navigation 
+*/
+  .navbar {
+    padding: 0;
+  }
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+  .navbar li {
+    position: relative;
+  }
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.8);
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+  .navbar a:hover,
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover > a {
+    color: #fff;
+  }
+  .navbar .dropdown ul {
     display: block;
+    position: absolute;
+    left: 30px;
+    top: calc(100% + 30px);
+    margin: 0;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: 0.3s;
+    border-radius: 4px;
+  }
+  .navbar .dropdown ul li {
+    min-width: 200px;
+  }
+  .navbar .dropdown ul a {
+    padding: 10px 20px;
+    color: #555;
+  }
+  .navbar .dropdown ul a i {
+    font-size: 12px;
+  }
+  .navbar .dropdown ul a:hover,
+  .navbar .dropdown ul .active:hover,
+  .navbar .dropdown ul li:hover > a {
+    color: #199eb8;
+  }
+  .navbar .dropdown:hover > ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+  .navbar .dropdown .dropdown ul {
+    top: 0;
+    left: calc(100% - 30px);
+    visibility: hidden;
+  }
+  .navbar .dropdown .dropdown:hover > ul {
+    opacity: 1;
+    top: 0;
+    left: 100%;
+    visibility: visible;
+  }
+  @media (max-width: 1366px) {
+    .navbar .dropdown .dropdown ul {
+      left: -90%;
+    }
+    .navbar .dropdown .dropdown:hover > ul {
+      left: -100%;
+    }
+  }
+
+  /**
+* Mobile Navigation 
+*/
+  .mobile-nav-toggle {
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+    line-height: 0;
+    transition: 0.5s;
+  }
+
+  @media (max-width: 991px) {
+    .mobile-nav-toggle {
+      display: block;
+    }
+
+    .navbar ul {
+      display: none;
+    }
+  }
+  .navbar-mobile {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(34, 34, 34, 0.9);
+    transition: 0.3s;
+    z-index: 999;
+  }
+  .navbar-mobile .mobile-nav-toggle {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+  .navbar-mobile ul {
+    display: block;
+    position: absolute;
+    top: 55px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
+    padding: 10px 0;
+    border-radius: 8px;
+    background-color: #fff;
+    overflow-y: auto;
+    transition: 0.3s;
+  }
+  .navbar-mobile a,
+  .navbar-mobile a:focus {
+    padding: 10px 20px;
+    font-size: 15px;
+    color: #555;
+  }
+  .navbar-mobile a:hover,
+  .navbar-mobile .active,
+  .navbar-mobile li:hover > a {
+    color: #199eb8;
+  }
+  .navbar-mobile .getstarted,
+  .navbar-mobile .getstarted:focus {
+    margin: 15px;
+  }
+  .navbar-mobile .dropdown ul {
+    position: static;
+    display: none;
+    margin: 10px 20px;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 1;
+    visibility: visible;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  }
+  .navbar-mobile .dropdown ul li {
+    min-width: 200px;
+  }
+  .navbar-mobile .dropdown ul a {
+    padding: 10px 20px;
+  }
+  .navbar-mobile .dropdown ul a i {
+    font-size: 12px;
+  }
+  .navbar-mobile .dropdown ul a:hover,
+  .navbar-mobile .dropdown ul .active:hover,
+  .navbar-mobile .dropdown ul li:hover > a {
+    color: #199eb8;
+  }
+  .navbar-mobile .dropdown > .dropdown-active {
+    display: block;
+  }
+
+  /*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+  .hero {
+    display: table;
+    position: relative;
+    background-image: url("../../assets/fond.png");
+    background-size: cover;
+    padding: 150px 0;
+    color: $color-2;
+    width: 100%;
+    height: 100vh;
+  }
+  .hero:after {
+    content: "";
+    z-index: 0;
+    position: absolute;
+    background: rgba(0, 207, 135, 0.4);
+
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+  .hero .container {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+  }
+
+  .hero-brand {
+    margin-bottom: 75px;
+    display: inline-block;
+  }
+  .hero-brand:hover {
+    opacity: 0.75;
+  }
+
+  .tagline {
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    font-size: 26px;
+    margin: 45px 0 75px 0;
+    color: rgba(4, 104, 175, 0.8);
+  }
+
+  /*--------------------------------------------------------------
+# Stats
+--------------------------------------------------------------*/
+  .stats-row {
+    margin-top: 65px;
+  }
+
+  .stats-col .circle {
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    color: #666;
+    border: 6px solid #199eb8;
+    border-radius: 50%;
+    padding: 37px 25px 0 25px;
+    position: relative;
+  }
+  .stats-col .circle .stats-no {
+    color: #fff;
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    top: -25px;
+    right: -15px;
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    background-color: $color-1;
+    position: absolute;
+    border-radius: 50%;
+    font-weight: 700;
+  }
+  .stats-no {
+  }
+  /*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+  .breadcrumbs {
+    padding: 20px 0;
+    background-color: #fafafa;
+    min-height: 40px;
+  }
+  .breadcrumbs h2 {
+    font-size: 24px;
+    font-weight: 300;
+    margin: 0;
+  }
+  @media (max-width: 992px) {
+    .breadcrumbs h2 {
+      margin: 0 0 10px 0;
+    }
+  }
+  .breadcrumbs ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+  }
+  .breadcrumbs ol li + li {
+    padding-left: 10px;
+  }
+  .breadcrumbs ol li + li::before {
+    display: inline-block;
+    padding-right: 10px;
+    color: #6c757d;
+    content: "/";
+  }
+  @media (max-width: 768px) {
+    .breadcrumbs .d-flex {
+      display: block !important;
+    }
+    .breadcrumbs ol {
+      display: block;
+    }
+    .breadcrumbs ol li {
+      display: inline-block;
+    }
+  }
+
+  /* ==================================================
+  Team Styling
+  ================================================== */
+  .team h2 {
+    color: #199eb8;
+  }
+  .team .col-sm-3 {
+    padding: 0;
+  }
+  .team .card > a {
+    display: block;
+  }
+  .team .card img {
+    width: 100%;
+  }
+  .team .card h4 {
+    color: $color-2;
+    text-transform: uppercase;
+  }
+  .team .card p {
+    font-size: 11px;
+    color: #fff;
+    opacity: 0.75;
+    margin: 0;
+    padding: 0 35px;
+  }
+  .team .card .social-nav {
+    margin-bottom: 45px;
+  }
+  .team .card .social-nav a {
+    color: #fff;
+    font-size: 16px;
+    margin: 0 4px;
+  }
+  .team .card .social-nav a:hover {
+    opacity: 0.75;
+  }
+  .team .card:hover .team-over {
+    opacity: 1;
+    visibility: visible;
+  }
+  .team .card:hover .card-title-wrap {
+    background-color: #199eb8;
+  }
+  .team .card:hover .card-title-wrap .card-title,
+  .team .card:hover .card-title-wrap .card-text {
+    color: #fff;
+  }
+  .team .team-over {
+    padding-top: 45px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+  }
+  .team .card-title-wrap {
+    padding: 15px 25px;
+    position: relative;
+    z-index: 9;
+    background-color: #fff;
+  }
+  .team .card-title-wrap .card-title,
+  .team .card-title-wrap .card-text {
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    display: block;
+    margin: 0;
+  }
+  .team .card-title-wrap .card-title {
+    font-size: 24px;
+    color: #333;
+  }
+  .team .card-title-wrap .card-text {
+    font-size: 18px;
+    color: #999;
+  }
+
+  /* ==================================================
+  Responsive Styling
+  ================================================== */
+  @media (max-width: 61.9em) {
+    section,
+    .block,
+    .cta {
+      padding: 35px 0;
+    }
+
+    .features {
+      padding-bottom: 5px;
+    }
+
+    p,
+    .block p {
+      margin: 0;
+    }
+
+    .hero-brand {
+      margin-bottom: 35px;
+    }
+
+    .tagline {
+      margin: 35px 0;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin: 0;
+    }
+
+    h2,
+    .tagline {
+      font-size: 24px;
+    }
+
+    h2 {
+      margin-bottom: 25px;
+    }
+
+    h3 {
+      font-size: 14px;
+    }
+
+    .hero {
+      padding: 75px 0;
+    }
+
+    .stats-col {
+      margin-bottom: 25px;
+    }
+
+    .block {
+      height: auto;
+    }
+
+    .feature-col {
+      padding-bottom: 30px;
+    }
+
+    .portfolio-grid .card h3.card-title {
+      font-size: 18px !important;
+    }
+    .portfolio-grid .card .card-text {
+      font-size: 13px;
+    }
+
+    .team .team-over {
+      padding-top: 20px;
+    }
+
+    .team .card .social-nav {
+      margin-bottom: 15px;
+      padding: 0;
+    }
+
+    .site-footer .social-nav {
+      margin-bottom: 35px;
+    }
+    .site-footer .list-inline {
+      text-align: center;
+      padding-bottom: 15px;
+    }
+    .site-footer .list-inline li {
+      display: inline-block;
+    }
+  }
+  @media (max-width: 767px) {
+    .block {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
   }
 }
