React trick pour accepter mission

--- a/handihelp-front/src/styles/pages/_profil.scss
+++ b/handihelp-front/src/styles/pages/_profil.scss
@@ -2,6 +2,10 @@ body {
     background-color: #f9f9fa
 }
 
+.page-container {
+    min-height: 70vh;
+}
+
 .padding {
     padding: 3rem !important
 }
